# Uma_Musume_TT_CM_Auto

./: .gitignore  README.md  check_device.py  check_id.py  config.example.json  config.json  coords.json  main.py  pyproject.toml  setup.bat
coords/: champions_meeting.json  common.json  daily_legends.json  daily_races.json  shop.json  team_trials.json
helper/: find_coords.py  find_coords_screen.py  make_a_screen.py  make_a_screen_screen.py
modes/: cm.py  tt.py
src/umauto/: __init__.py  __main__.py  app.py  cli.py  config.py  coords.py  paths.py  screen.py  setup_config.py
src/umauto/driver/: __init__.py  adb.py  base.py  steam.py
src/umauto/features/: __init__.py  registry.py
src/umauto/features/champions_meeting/: __init__.py  launch.py  reward.py  run.py  runner.py  team.py  ticket.py
src/umauto/features/common/: __init__.py  shop.py
src/umauto/features/daily_full/: __init__.py  runner.py
src/umauto/features/daily_legends/: __init__.py  champions.py  launch.py  race.py  runner.py  select.py
src/umauto/features/daily_races/: __init__.py  launch.py  race.py  runner.py  select.py  start.py
src/umauto/features/shop/: __init__.py  buy_all.py  buy_specific.py  dispatch.py  mode.py  shop_items.py
src/umauto/features/team_trials/: __init__.py  difficulty.py  finish.py  launch.py  run.py  runner.py  setup.py  shop.py
src/umauto/gui/: __init__.py  __main__.py  api.py  app.py  runtime.py  schema.py
src/umauto/gui/web/: index.html
src/umauto/setup/: __init__.py  defaults.py  prompts.py  wizard.py
src/umauto/tools/: check_device.py
tests/: test_config_sync.py
tools/: __init__.py  adb.py  steam.py
utils/: collect_ticket_cm.py  daily_shop.py  difficulty.py  finish_run.py  launch_cm.py  launch_tt.py  reward_cm.py  run.py  run_cm.py  setup.py  setup_team_cm.py
