[project]
name = "umauto"
version = "1.0.0"
description = "Uma Musume Team Trials / Champions Meeting automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow",
    "pyautogui",
    "pygetwindow",
    "pywin32; sys_platform == 'win32'",
]

[project.scripts]
umauto = "umauto.app:run"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
